--- a/index.html
+++ b/index.html
@@ -1,3 +1,44 @@
-<h1>
-  Hello! My name is An
-</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Trung An</title>
+  <style>
+    body {
+      font-family: Tahoma, sans-serif;
+    }
+    h1 {
+      color: #333333;
+    }
+    .section {
+      margin-bottom: 20px;
+    }
+  </style>
+</head>
+<body>
+  <h1>Personal Information</h1>
+  <div class="section">
+    <p><strong>Name:</strong> Tống Trung An</p>
+    <p><strong>Date of birth:</strong>02/03/2005 </p>
+    <p><strong> Thành phố: </p> Ha Noi </p>
+  </div>
+
+  <h1>Interest</h1>
+  <div class="section">
+    <p><strong>Drawing</p>
+    <p><strong>Photography</p>
+    <p><strong>Football</p>
+    <p>Network Security</p>
+  </div>
+
+  <h1>Skill</h1>
+  <div class="section">
+    <p>Web Design with HTML and CSS</p>
+  <h1>Education
+    <p>Nguyen Gia Thieu High School<p>
+    <p>Do Thi Viet Hung Secondary School</p>
+  </h1>Experience<h1>
+    <p>Waiter</p>
+  </div>
+</body>
+</html>
+/
