--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
         <table>
             <tr>
                 <td><label for="name"></label>
-                </td><label for="name"></label>
+                </td><input type="text" name="name" id="name"  placeholder="Enter your name">
             </tr>
             
             <tr>
