--- a/form.html
+++ b/form.html
@@ -12,6 +12,16 @@
             </tr>
             
             <tr>
+                <td><label for="gender"></label>
+                </td><select name="gender" id="gender">
+                    <option value="male"></option>
+                    <option value="female"></option>
+                    <option value="Gay"></option>
+                    <option value="gender bender"></option>
+                </select>
+            </tr>
+
+            <tr>
                 <td><label for="email"></label>
                 </td><input type="email" name="name" id="email" placeholder="Enter your email">
             </tr>
