--- a/form.html
+++ b/form.html
@@ -14,10 +14,10 @@
             <tr>
                 <td><label for="gender"></label>
                 </td><select name="gender" id="gender">
-                    <option value="male"></option>
-                    <option value="female"></option>
-                    <option value="Gay"></option>
-                    <option value="gender bender"></option>
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                    <option value="Gay">Gay</option>
+                    <option value="gender bender">Gender Bender</option>
                 </select>
             </tr>
 
