--- a/form.html
+++ b/form.html
@@ -13,11 +13,12 @@
             
             <tr>
                 <td><label for="gender"></label>
-                </td><select name="gender" id="gender">
+                <select name="gender" id="gender">
                     <option value="male">Male</option>
                     <option value="female">Female</option>
                     <option value="Gay">Gay</option>
                     <option value="gender bender">Gender Bender</option>
+                </td>
                 </select>
             </tr>
 
