--- a/form.html
+++ b/form.html
@@ -13,7 +13,8 @@
             
             <tr>
                 <td><label for="gender"></label>
-                <select name="gender" id="gender">
+                <select name="gender" id="gender" required>
+                    <option value="">Please Select</option>
                     <option value="male">Male</option>
                     <option value="female">Female</option>
                     <option value="Gay">Gay</option>
