--- a/form.html
+++ b/form.html
@@ -17,7 +17,7 @@
                     <option value="">Please Select</option>
                     <option value="male">Male</option>
                     <option value="female">Female</option>
-                    <option value="Gay">Gay</option>
+                    <option value="Hide">Hide</option>
                     <option value="gender bender">Gender Bender</option>
                 </select>
                 </td>
