--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Trung An</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My CV</title>
   <style>
     body {
-      font-family: Tahoma, sans-serif;
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      color: #333;
     }
-    h1 {
-      color: #333333;
+    h1, h2 {
+      color: #0066cc;
     }
     .section {
       margin-bottom: 20px;
@@ -15,30 +19,32 @@
   </style>
 </head>
 <body>
-  <h1>Personal Information</h1>
   <div class="section">
-    <p><strong>Name:</strong> Tống Trung An</p>
-    <p><strong>Date of birth:</strong>02/03/2005 </p>
-    <p><strong> Thành phố: </p> Ha Noi </p>
+    <h1>John Doe</h1>
+    <p>Email: johndoe@email.com</p>
+    <p>Phone: 123-456-7890</p>
   </div>
-
-  <h1>Interest</h1>
   <div class="section">
-    <p><strong>Drawing</p>
-    <p><strong>Photography</p>
-    <p><strong>Football</p>
-    <p>Network Security</p>
+    <h2>Education</h2>
+    <ul>
+      <li>University Name - Degree Name, Graduation Year</li>
+      <li>High School Name - Graduation Year</li>
+    </ul>
   </div>
-
-  <h1>Skill</h1>
   <div class="section">
-    <p>Web Design with HTML and CSS</p>
-  <h1>Education
-    <p>Nguyen Gia Thieu High School<p>
-    <p>Do Thi Viet Hung Secondary School</p>
-  </h1>Experience<h1>
-    <p>Waiter</p>
+    <h2>Experience</h2>
+    <ul>
+      <li>Job Title, Company Name - Duration</li>
+      <li>Job Title, Company Name - Duration</li>
+    </ul>
+  </div>
+  <div class="section">
+    <h2>Skills</h2>
+    <ul>
+      <li>Skill 1</li>
+      <li>Skill 2</li>
+      <li>Skill 3</li>
+    </ul>
   </div>
 </body>
 </html>
-/
