--- a/week2/CV.html
+++ b/week2/CV.html
@@ -44,7 +44,7 @@
     <ul>
       <li>Thiết kế Web bằng HTML và CSS</li>
       <li>Thông Thạo C++,Python,Java</li>
-      <li>Skill 3</li>
+      <li>Chứng chỉ Aptis B2</li>
     </ul>
   </div>
 </body>
