--- a/week2/CV.html
+++ b/week2/CV.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <title>My CV</title>
+  <title>Trung An</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      color: #333;
+      font-family: Tahoma, sans-serif;
     }
-    h1, h2 {
-      color: #0066cc;
+    h1 {
+      color: #333333;
     }
     .section {
       margin-bottom: 20px;
@@ -17,35 +15,30 @@
   </style>
 </head>
 <body>
+  <h1>Personal Information</h1>
   <div class="section">
-    <h1>Tống Trung An</h1>
-    <p>Email: antongtrung19@gmail.com</p>
-    <p>Phone: 0975833281</p>
+    <p><strong>Name:</strong> Tống Trung An</p>
+    <p><strong>Date of birth:</strong>02/03/2005 </p>
+    <p><strong> Thành phố: </p> Ha Noi </p>
   </div>
+
+  <h1>Interest</h1>
   <div class="section">
-    <h2>Education</h2>
-    <ul>
-      <li>Trường Quốc Tế - Đại học Quốc gia Hà Nội - Công Nghệ Thông Tin Ứng Dụng, </li>
-      <li>THPT Nguyễn Gia Thiều - </li>
-      <li>THCS Đô Thị Việt Hưng</li>
-    </ul>
+    <p><strong>Drawing</p>
+    <p><strong>Photography</p>
+    <p><strong>Football</p>
+    <p>Network Security</p>
   </div>
+
+  <h1>Skill</h1>
   <div class="section">
-    <h2>Interest</h2>
-    <ul>
-      <li>Đá bóng</li>
-      <li>Chụp ảnh</li>
-      <li>Nghe nhạc</li>
-      </li>
-    </ul>
-  </div>
-  <div class="section">
-    <h2>Skills</h2>
-    <ul>
-      <li>Thiết kế Web bằng HTML và CSS</li>
-      <li>Thông Thạo C++,Python,Java</li>
-      <li>Chứng chỉ Aptis B2</li>
-    </ul>
+    <p>Web Design with HTML and CSS</p>
+  <h1>Education
+    <p>Nguyen Gia Thieu High School<p>
+    <p>Do Thi Viet Hung Secondary School</p>
+  </h1>Experience<h1>
+    <p>Waiter</p>
   </div>
 </body>
 </html>
+/
