--- a/week5/labb exercise3.html
+++ b/week5/labb exercise3.html
@@ -7,7 +7,9 @@
     <h1 class='txtMU'>Red Devils</h1>
 
     <style type="text/css">
-.txtMU {
+
+.txtMU
+         {
     font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
     text-transform: uppercase;
     text-align: center;
