--- a/index.html
+++ b/index.html
@@ -1,50 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My CV</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      color: #333;
-    }
-    h1, h2 {
-      color: #0066cc;
-    }
-    .section {
-      margin-bottom: 20px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>figure11.1.2</title>
+    
 </head>
 <body>
-  <div class="section">
-    <h1>John Doe</h1>
-    <p>Email: johndoe@email.com</p>
-    <p>Phone: 123-456-7890</p>
-  </div>
-  <div class="section">
-    <h2>Education</h2>
-    <ul>
-      <li>University Name - Degree Name, Graduation Year</li>
-      <li>High School Name - Graduation Year</li>
-    </ul>
-  </div>
-  <div class="section">
-    <h2>Experience</h2>
-    <ul>
-      <li>Job Title, Company Name - Duration</li>
-      <li>Job Title, Company Name - Duration</li>
-    </ul>
-  </div>
-  <div class="section">
-    <h2>Skills</h2>
-    <ul>
-      <li>Skill 1</li>
-      <li>Skill 2</li>
-      <li>Skill 3</li>
-    </ul>
-  </div>
+  
+    <input type="text" id="number1">
+    <input type="text" id= "number2">
+    <button onclick="cong()" >Kết quả</button>
+    <p id="text1"></p>
 </body>
+<script>
+    function cong() 
+    {
+
+        var  number1 = document.getElementById("number1").value;
+        var number2 =document.getElementById("number2").value;
+        if (number1 == null || number1 == "" || isNaN(number1)) 
+        { 
+            document.getElementById("text1").innerHTML = "<font color='red'> Number A is formatted incorrect";
+        } 
+        else if (number2 == null || number2 == "" || isNaN(number2)) 
+        { 
+            document.getElementById("text1").innerHTML = "<font color='red'> Number B is formatted incorrect";
+        }
+        else
+        {
+            var result = parseFloat(number1) + parseFloat(number2); 
+            document.getElementById("text1").innerHTML = "<font color='green'> Result:\n" +
+            number1 + "+ " + number2 + " =" + "\n"+ result ;
+        }
+    }
+</script>
 </html>
