--- a/week8/Booking.html
+++ b/week8/Booking.html
@@ -5,18 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eternal SunShine</title>
   <link rel="stylesheet" href="stylehome.css">
-  <script src="https://kit.fontawesome.com/87cabdeeec.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
     <div class="header-top">
-      <i class="fa-solid fa-bars"></i>
       <ul>
+        <li><img src="8qio8Q01.svg" style="width:150px;height:130px;" /></li>
         <li><a href="">Home</a>
-          <li><a href="">Our room</a>
+          <li><a href="">Our services</a>
+            <li><a href="">Booking</a>
             <li><a href="">Contact</a>
-              <li><a href="">Offer</a>
-                <li><a href="">Feedback</a></li>
       </ul>
       <div class="video-container">
         <video src="videobg.mp4" autoplay muted loop></video>
