--- a/bài cá nhân nhóm/moreservices.html
+++ b/bài cá nhân nhóm/moreservices.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Enternal Sunshine</title>
     <script src="https://kit.fontawesome.com/87cabdeeec.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700&display=swap" rel="stylesheet">
@@ -247,7 +247,7 @@
                             <div class="fa-social">
                                 <a href="#"><i class="fa fa-facebook"></i></a>
                                 <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-telegram"></i></a>
+                                <a href="#"><i class="fa fa-tripadvisor"></i></a>
                                 <a href="#"><i class="fa fa-instagram"></i></a>
                                 <a href="#"><i class="fa fa-youtube-play"></i></a>
                             </div>
@@ -287,6 +287,5 @@
                             <li><a href="#">Environmental Policy</a></li>
                         </ul>
                     </div>
-                </footer>
 </body>
 </html>
